--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2016 Angel Garcia
 
@@ -16,21 +15,23 @@
  -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.xengar.android.movieguide.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.xengar.android.movieguide.MainFragment">
 
-    <TextView
+    <!-- TODO: Update blank fragment layout -->
+    <Button
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Main Activity" />
+        android:text="MAIN"
+        android:padding="8dp"
+        android:textColor="#FFFFFFFF"
+        android:background="@color/colorAccent"
+        android:textSize="28sp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        />
+
 </RelativeLayout>
