--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,8 +17,15 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="movie_guide_gridview_vertical_spacing">1dp</dimen>
+    <dimen name="movie_guide_gridview_horizontal_spacing">1dp</dimen>
+    <dimen name="movie_guide_gridview_column_width">150dp</dimen>
+
+    <dimen name="detail_text_view_title_poster_text_size">25sp</dimen>
 </resources>
