--- a/app/src/main/res/layout/movie_guide_universal_fragment.xml
+++ b/app/src/main/res/layout/movie_guide_universal_fragment.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xengar.android.movieguide.MovieGuideUniversalFragment">
+    tools:context="com.xengar.android.movieguide.ui.MovieGuideUniversalFragment">
 
     <GridView
         android:id="@+id/gridview"
