--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,7 @@
     <dimen name="movie_guide_gridview_column_width">150dp</dimen>
 
     <dimen name="detail_text_view_title_poster_text_size">25sp</dimen>
+
+    <!-- Needed if we aren't including the Material Design Library -->
+    <dimen name="appbar_elevation">4dp</dimen>
 </resources>
