Add sample Details Movie activity
- Add Glide dependency
- Add sample Details Movie activity
- Display sample Details Movie activity when clicking a movie item

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,7 @@
 
     <!-- Needed if we aren't including the Material Design Library -->
     <dimen name="appbar_elevation">4dp</dimen>
+
+    <dimen name="detail_backdrop_height">256dp</dimen>
+    <dimen name="card_margin">16dp</dimen>
 </resources>
