--- a/app/src/main/res/drawable/ic_star_border_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_star_border_black_24dp.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2017 Angel Garcia
 
@@ -14,15 +13,12 @@
      See the License for the specific language governing permissions and
      limitations under the License.
  -->
-<resources>
-    <color name="colorPrimary">#ffffff</color>
-    <color name="colorPrimaryDark">#FF000000</color>
-    <color name="colorAccent">#FF28496B</color>
-
-    <color name="colorBackground">#4f8293</color>
-
-    <color name="movie_details_text_color">#c63b3b</color>
-    <color name="movie_details_background_color">#FF094C6B</color>
-    <color name="textcolorPrimary">#fde4a9</color>
-    <color name="textcolorSec">#8f2626</color>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M22,9.24l-7.19,-0.62L12,2 9.19,8.63 2,9.24l5.46,4.73L5.82,21 12,17.27 18.18,21l-1.63,-7.03L22,9.24zM12,15.4l-3.76,2.27 1,-4.28 -3.32,-2.88 4.38,-0.38L12,6.1l1.71,4.04 4.38,0.38 -3.32,2.88 1,4.28L12,15.4z"/>
+</vector>
