--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -26,7 +26,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/detail_backdrop_height"
+        android:layout_height="@dimen/movie_details_background_poster_min_height"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:fitsSystemWindows="true">
 
@@ -41,10 +41,10 @@
             app:expandedTitleMarginEnd="64dp">
 
             <ImageView
-                android:id="@+id/backdrop"
+                android:id="@+id/background_poster"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
+                android:layout_height="@dimen/movie_details_background_poster_min_height"
+                android:gravity="center_horizontal"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax" />
 
@@ -60,6 +60,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -67,8 +68,52 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="24dp">
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:id="@+id/rating"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/movie_details_rating_min_height"
+                android:layout_gravity="center_vertical"
+                android:elevation="4dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/star_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:src="@drawable/ic_star_border_black_24dp" />
+
+                <TextView
+                    android:id="@+id/text_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center_vertical" />
+
+                <TextView
+                    android:id="@+id/imdb_text_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:gravity="center_vertical"
+                    android:text="imdb_raiting" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="4dp"
+                android:fontFamily="Roboto"
+                android:gravity="center_vertical"
+                android:minHeight="@dimen/movie_details_title_min_height"
+                android:paddingLeft="@dimen/movie_details_title_padding_left"
+                android:text="movie title"
+                android:textSize="@dimen/movie_details_title_text_size"
+                android:textStyle="normal" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -160,6 +205,6 @@
         app:layout_anchorGravity="bottom|right|end"
         android:src="@drawable/fab_plus"
         android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"/>
+        android:clickable="true" />
 
 </android.support.design.widget.CoordinatorLayout>
