--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,6 +32,13 @@
     <!-- Needed if we aren't including the Material Design Library -->
     <dimen name="appbar_elevation">4dp</dimen>
 
-    <dimen name="detail_backdrop_height">256dp</dimen>
+    <dimen name="detail_backdrop_height">200dp</dimen>
     <dimen name="card_margin">16dp</dimen>
+
+    <dimen name="movie_details_background_poster_min_height">200dp</dimen>
+    <dimen name="movie_details_rating_min_height">28dp</dimen>
+    <dimen name="movie_details_title_padding_left">20dp</dimen>
+    <dimen name="movie_details_title_min_height">50dp</dimen>
+    <dimen name="movie_details_title_text_size">25sp</dimen>
+
 </resources>
