--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -131,10 +131,113 @@
                         android:text="Info"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/cheese_ipsum" />
+                        android:layout_marginBottom="1dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/movie_poster"
+                            android:layout_width="@dimen/movie_details_image_layout_width"
+                            android:layout_height="@dimen/movie_details_image_layout_height"
+                            android:src="@drawable/no_movie_poster"
+                            android:layout_marginBottom="1dp" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/genre"
+                                style="@style/DetailViewTextMedium"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:text="Genre" />
+
+                            <TextView
+                                android:id="@+id/countries"
+                                style="@style/DetailViewTextMedium"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:text="Countries " />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:id="@+id/movie_duration"
+                                    style="@style/DetailViewTextSmall"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="left"
+                                    android:text="movie duration" />
+                                <TextView
+                                    android:id="@+id/text_language"
+                                    style="@style/DetailViewTextSmall"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="left" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:id="@+id/movie_date"
+                                    style="@style/DetailViewTextSmall"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="left" />
+
+                                <TextView
+                                    android:id="@+id/status"
+                                    style="@style/DetailViewTextSmall"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="left"
+                                    android:text="Status "
+                                    android:visibility="gone" />
+                            </LinearLayout>
+
+                            <TextView
+                                android:id="@+id/prod_companies"
+                                style="@style/DetailViewTextSmall"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:layout_marginTop="5dp"
+                                android:text="Prod Companies" />
+
+                            <TextView
+                                android:id="@+id/imdb_id"
+                                style="@style/DetailViewTextSmall"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:text="imdb_id " />
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <!--- Plot -->
+                    <TextView
+                        android:id="@+id/movie_plot"
+                        style="@style/DetailViewTextMedium"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:paddingTop="10dp" />
 
                 </LinearLayout>
 
