--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,7 +27,10 @@
     <dimen name="movie_guide_gridview_horizontal_spacing">1dp</dimen>
     <dimen name="movie_guide_gridview_column_width">150dp</dimen>
 
-    <dimen name="detail_text_view_title_poster_text_size">25sp</dimen>
+    <dimen name="movie_details_text_title_poster_text_size">25sp</dimen>
+
+    <dimen name="movie_details_image_layout_width">130dp</dimen>
+    <dimen name="movie_details_image_layout_height">200dp</dimen>
 
     <!-- Needed if we aren't including the Material Design Library -->
     <dimen name="appbar_elevation">4dp</dimen>
@@ -40,5 +43,6 @@
     <dimen name="movie_details_title_padding_left">20dp</dimen>
     <dimen name="movie_details_title_min_height">50dp</dimen>
     <dimen name="movie_details_title_text_size">25sp</dimen>
+
 
 </resources>
