--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,5 +43,25 @@
         <item name="android:orientation">vertical</item>
     </style>
 
+    <style name="DetailViewText">
+        <item name="android:fontFamily">Roboto</item>
+        <item name="android:textColor">@color/textcolor</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">15dp</item>
+    </style>
+
+    <style name="DetailViewTextSmall">
+        <item name="android:fontFamily">Roboto</item>
+        <item name="android:textColor">@color/textcolor</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">10dp</item>
+    </style>
+
+    <style name="DetailViewTextMedium">
+        <item name="android:fontFamily">Roboto</item>
+        <item name="android:textColor">@color/textcolor</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">12dp</item>
+    </style>
 
 </resources>
