--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,4 +64,11 @@
         <item name="android:textSize">12dp</item>
     </style>
 
+    <style name="DetailViewTextMediumBlack">
+        <item name="android:fontFamily">Roboto</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
 </resources>
