Add Movie list into Personal Profile page
- Add MovieList into Personal Profile page.
- Launch movie details page when clicking on Movie item on Personal
Profile page
- Add MovieAdapter class

--- a/app/src/main/res/layout/activity_person_profile.xml
+++ b/app/src/main/res/layout/activity_person_profile.xml
@@ -86,7 +86,7 @@
                     android:src="@drawable/ic_star_border_black_24dp" />
 
                 <TextView
-                    android:id="@+id/popularity"
+                    android:id="@+id/text_popularity"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
