Implement Favorite Movies in sliding menu

--- a/app/src/main/res/layout/activity_person_profile.xml
+++ b/app/src/main/res/layout/activity_person_profile.xml
@@ -200,7 +200,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
-                        android:text="@string/large_text"
+                        android:text="@string/cheese_ipsum"
                         android:paddingTop="10dp" />
 
                 </LinearLayout>
