--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -20,13 +20,6 @@
         android:title="@string/pref_header_general"
         android:key="pref_key_storage_settings_general">
 <!--
-        <SwitchPreference
-            android:icon="@drawable/ic_info_black_24dp"
-            android:defaultValue="true"
-            android:key="example_switch"
-            android:summary="@string/pref_description_social_recommendations"
-            android:title="@string/pref_title_social_recommendations" />
-
         // NOTE: EditTextPreference accepts EditText attributes.
         // NOTE: EditTextPreference's summary should be set to its value by the activity code.
         <EditTextPreference
@@ -40,6 +33,12 @@
             android:singleLine="true"
             android:title="@string/pref_title_display_name" />
 -->
+        <SwitchPreference
+            android:icon="@drawable/ic_toolbar_black_24dp"
+            android:defaultValue="true"
+            android:key="@string/pref_show_main_toolbar"
+            android:summary="@string/pref_description_show_main_toolbar"
+            android:title="@string/pref_title_show_main_toolbar" />
 
         <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
         <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
