--- a/app/src/main/res/layout/credit_list_item.xml
+++ b/app/src/main/res/layout/credit_list_item.xml
@@ -31,7 +31,7 @@
         android:text="date"/>
 
     <TextView
-        android:id="@+id/movie_title"
+        android:id="@+id/poster_title"
         style="@style/DetailViewTextSmall"
         android:layout_width="0dp"
         android:layout_weight="2"
