--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -20,14 +20,14 @@
     android:layout_height="278px">
 
     <ImageView
-        android:id="@+id/movie_poster_view"
+        android:id="@+id/poster_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/no_movie_poster"
         android:scaleType="fitXY" />
 
     <TextView
-        android:id="@+id/movie_title"
+        android:id="@+id/poster_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fontFamily="Arial"
